# Quellog

./: .gitignore  README.md
.github/workflows/: firmware-ci.yml  firmware-release.yml
device-config-web/: done.html  index.html  package-lock.json  package.json  vite.config.js
device-config-web/scripts/: build.mjs
device-config-web/src/: api.js  done.js  index.js  styles.css
firmware/: .gitignore  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/quellog_wifi/: CMakeLists.txt  dns_server.cc  ssid_manager.cc  wifi_configuration_ap.cc  wifi_manager.cc  wifi_station.cc
firmware/components/quellog_wifi/include/: dns_server.h  ssid_manager.h  wifi_configuration_ap.h  wifi_manager.h  wifi_station.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_context.h  application.cc  application.h  device_state.h  main.cc  settings.cc  settings.h
firmware/main/boards/common/: board.cc  board.h
firmware/main/boards/zectrix-s3-epaper-4.2/: config.h  zectrix-s3-epaper-4.2.cc
firmware/main/display/: bitmap_font.cc  bitmap_font.h  display.cc  display.h  ui_page.h  ui_page_registry.cc  ui_page_registry.h
firmware/main/display/pages/: overview_page.cc  overview_page.h  recent_records_page.cc  recent_records_page.h  settings_page.cc  settings_page.h  stats_page.cc  stats_page.h
firmware/scripts/: build_release.py  build_web_ui.py  generate_font_partition.py
